# sd-stub-rs

./: README.md  flake.nix
.github/: renovate.json
.github/workflows/: ci.yml
nix/tests/: sd-stub.nix
rust/: Cargo.toml
rust/src/: main.rs
