[package]
name = "sd-stub-rs"
version = "0.1.0"
edition = "2021"
publish = false
# For UEFI target
rust_version = "1.68"

[dependencies]
uefi = { version = "0.27.0", default-features = false, features = [ "alloc", "global_allocator" ] }
uefi-services = { version = "0.24.0", default-features = false, features = [ "panic_handler", "logger" ] }
goblin = { version = "0.8.0", default-features = false, features = [ "pe64", "alloc" ]}

# Even in debug builds, we don't enable the debug logs, because they generate a lot of spam from goblin.
log = { version = "0.4.21", default-features = false, features = [ "max_level_info", "release_max_level_warn" ]}

# Use software implementation because the UEFI target seems to need it.
sha2 = { version = "0.10.8", default-features = false, features = ["force-soft"] }

[profile.release]
opt-level = "s"
lto = true
